--- a/project/nef.xcodeproj/xcshareddata/xcschemes/iPad.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/iPad.xcscheme
@@ -50,6 +50,20 @@
             ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "--to &quot;/Users/miguelangel/Desktop&quot;"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--name &quot;iPadPlayground&quot;"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--package &quot;/Users/miguelangel/Desktop/Package.swift&quot;"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
