decoupled nef ipad fw from UI command line

--- a/project/nef.xcodeproj/xcshareddata/xcschemes/nef.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/nef.xcscheme
@@ -28,6 +28,10 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <TestPlans>
+         <TestPlanReference
+            reference = "container:Tests/NefTestPlan.xctestplan"
+            default = "YES">
+         </TestPlanReference>
       </TestPlans>
    </TestAction>
    <LaunchAction
