--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ env:
     - PROJECT="./project/nef.xcodeproj"
     - JOB="XCODE"
     - DEST="arch=x86_64"
-    - SCHEME="Core"
+    - SCHEME="nef"
     - SDK="macosx"
     - ACTION="test"
 
