Re-structure API to nef library
minor changes

--- a/project/UI/CLIKit/Support Files/Info.plist
+++ b/project/UI/CLIKit/Support Files/Info.plist
@@ -13,12 +13,12 @@
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
-	<string>FMWK</string>
+	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2019 The nef Authors.</string>
+	<string>Copyright © 2019 47 Degrees. All rights reserved.</string>
 </dict>
 </plist>
