--- a/project/Component/NefMarkdown/Support Files/Info.plist
+++ b/project/Component/NefMarkdown/Support Files/Info.plist
@@ -19,6 +19,6 @@
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2019 47 Degrees. All rights reserved.</string>
+	<string>Copyright © 2019 The nef Authors.</string>
 </dict>
 </plist>
