--- a/project/nef.xcodeproj/xcshareddata/xcschemes/MarkdownPage.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/MarkdownPage.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1100"
+   LastUpgradeVersion = "1110"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8B6FC584221ECE6A008F7694"
-               BuildableName = "Jekyll"
-               BlueprintName = "Jekyll"
+               BlueprintIdentifier = "8B424B1E224E28FC00AF9010"
+               BuildableName = "MarkdownPage"
+               BlueprintName = "MarkdownPage"
                ReferencedContainer = "container:nef.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -29,17 +29,6 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8B6FC584221ECE6A008F7694"
-            BuildableName = "Jekyll"
-            BlueprintName = "Jekyll"
-            ReferencedContainer = "container:nef.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -55,14 +44,12 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8B6FC584221ECE6A008F7694"
-            BuildableName = "Jekyll"
-            BlueprintName = "Jekyll"
+            BlueprintIdentifier = "8B424B1E224E28FC00AF9010"
+            BuildableName = "MarkdownPage"
+            BlueprintName = "MarkdownPage"
             ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -74,9 +61,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8B6FC584221ECE6A008F7694"
-            BuildableName = "Jekyll"
-            BlueprintName = "Jekyll"
+            BlueprintIdentifier = "8B424B1E224E28FC00AF9010"
+            BuildableName = "MarkdownPage"
+            BlueprintName = "MarkdownPage"
             ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
