--- a/project/nef.xcodeproj/xcshareddata/xcschemes/MarkdownPage.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/MarkdownPage.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "8B424B1E224E28FC00AF9010"
-               BuildableName = "MarkdownPage"
+               BuildableName = "nef-markdown-page"
                BlueprintName = "MarkdownPage"
                ReferencedContainer = "container:nef.xcodeproj">
             </BuildableReference>
@@ -45,7 +45,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8B424B1E224E28FC00AF9010"
-            BuildableName = "MarkdownPage"
+            BuildableName = "nef-markdown-page"
             BlueprintName = "MarkdownPage"
             ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
@@ -62,7 +62,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8B424B1E224E28FC00AF9010"
-            BuildableName = "MarkdownPage"
+            BuildableName = "nef-markdown-page"
             BlueprintName = "MarkdownPage"
             ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
