--- a/project/nef.xcodeproj/xcshareddata/xcschemes/NefSwiftPlayground.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/NefSwiftPlayground.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1110"
+   LastUpgradeVersion = "1120"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8B6FC584221ECE6A008F7694"
-               BuildableName = "nef-jekyll-page"
-               BlueprintName = "JekyllPage"
+               BlueprintIdentifier = "8BD4E31C238817BB002DECDB"
+               BuildableName = "NefSwiftPlayground.framework"
+               BlueprintName = "NefSwiftPlayground"
                ReferencedContainer = "container:nef.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -40,16 +40,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8B6FC584221ECE6A008F7694"
-            BuildableName = "nef-jekyll-page"
-            BlueprintName = "JekyllPage"
-            ReferencedContainer = "container:nef.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -57,16 +47,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8B6FC584221ECE6A008F7694"
-            BuildableName = "nef-jekyll-page"
-            BlueprintName = "JekyllPage"
+            BlueprintIdentifier = "8BD4E31C238817BB002DECDB"
+            BuildableName = "NefSwiftPlayground.framework"
+            BlueprintName = "NefSwiftPlayground"
             ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
