--- a/project/nef.xcodeproj/xcshareddata/xcschemes/SwiftPlayground.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/SwiftPlayground.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1110"
+   LastUpgradeVersion = "1120"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8B6FC584221ECE6A008F7694"
-               BuildableName = "nef-jekyll-page"
-               BlueprintName = "JekyllPage"
+               BlueprintIdentifier = "8BD4E309238814B1002DECDB"
+               BuildableName = "nef-swift-playground"
+               BlueprintName = "SwiftPlayground"
                ReferencedContainer = "container:nef.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -44,9 +44,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8B6FC584221ECE6A008F7694"
-            BuildableName = "nef-jekyll-page"
-            BlueprintName = "JekyllPage"
+            BlueprintIdentifier = "8BD4E309238814B1002DECDB"
+            BuildableName = "nef-swift-playground"
+            BlueprintName = "SwiftPlayground"
             ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -61,9 +61,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8B6FC584221ECE6A008F7694"
-            BuildableName = "nef-jekyll-page"
-            BlueprintName = "JekyllPage"
+            BlueprintIdentifier = "8BD4E309238814B1002DECDB"
+            BuildableName = "nef-swift-playground"
+            BlueprintName = "SwiftPlayground"
             ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
