add step for building checkout

--- a/project/nef.xcodeproj/xcshareddata/xcschemes/SwiftPlayground.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/SwiftPlayground.xcscheme
@@ -50,6 +50,20 @@
             ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "--to &quot;~/Desktop/migue-bow&quot;"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--name &quot;SwiftPlayground&quot;"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--package &quot;~/Desktop/package-bow.txt&quot;"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
