connected CLI nef-playground-book to nef menu script (bash)

--- a/project/nef.xcodeproj/xcshareddata/xcschemes/PlaygroundBook.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/PlaygroundBook.xcscheme
@@ -16,7 +16,7 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "8BD4E309238814B1002DECDB"
                BuildableName = "nef-swift-playground"
-               BlueprintName = "SwiftPlayground"
+               BlueprintName = "PlaygroundBook"
                ReferencedContainer = "container:nef.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -46,24 +46,10 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8BD4E309238814B1002DECDB"
             BuildableName = "nef-swift-playground"
-            BlueprintName = "SwiftPlayground"
+            BlueprintName = "PlaygroundBook"
             ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <CommandLineArguments>
-         <CommandLineArgument
-            argument = "--to &quot;~/Desktop/migue-bow&quot;"
-            isEnabled = "YES">
-         </CommandLineArgument>
-         <CommandLineArgument
-            argument = "--name &quot;SwiftPlayground&quot;"
-            isEnabled = "YES">
-         </CommandLineArgument>
-         <CommandLineArgument
-            argument = "--package &quot;~/Desktop/package-bow.txt&quot;"
-            isEnabled = "YES">
-         </CommandLineArgument>
-      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -77,7 +63,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8BD4E309238814B1002DECDB"
             BuildableName = "nef-swift-playground"
-            BlueprintName = "SwiftPlayground"
+            BlueprintName = "PlaygroundBook"
             ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
