add verbose mode to CLI (markdown, jekyll, carbon)
NefCore return the render information in success

--- a/project/nef.xcodeproj/xcshareddata/xcschemes/CarbonPage.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/CarbonPage.xcscheme
@@ -56,6 +56,10 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
+            argument = "--verbose"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "--output &quot;~/Desktop&quot;"
             isEnabled = "YES">
          </CommandLineArgument>
