--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,7 @@ jobs:
         - xcodebuild "$ACTION" -project "$PROJECT" -scheme "$SCHEME" -sdk "$SDK" ONLY_ACTIVE_ARCH=NO -destination "$DEST" | xcpretty -c
     - stage: verify documentation
       before_install:
-        - gem update --system
-        - gem install cocoapods
+        - gem install cocoapods -v 1.8.4
       script:
         - nef compile Documentation.app
     - stage: deploy microsite
