connected UI (CLI) to library (API) and NefMarkdown (Component)

--- a/project/nef.xcodeproj/xcshareddata/xcschemes/Markdown.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/Markdown.xcscheme
@@ -50,6 +50,16 @@
             ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "--folder /Users/miguelangel/Desktop/BowPlayground.app"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--output ~/Desktop/migue"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
