--- a/project/nef.xcodeproj/xcshareddata/xcschemes/MarkdownPage.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/MarkdownPage.xcscheme
@@ -52,7 +52,15 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
+            argument = "--output ~/Desktop"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "--h"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--page /Users/miguelangel/Desktop/BowPlayground.app/Contents/MacOS/BowPlayground.playground/Pages/page.xcplaygroundpage"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
