migrate Array<A> to NEA<A> in NefRender - improvements in API

--- a/project/nef.xcodeproj/xcshareddata/xcschemes/Jekyll.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/Jekyll.xcscheme
@@ -50,6 +50,20 @@
             ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "--project /Users/miguelangel/Desktop/BowPlayground.app"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--output ~/Desktop/migue"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--main-page /Users/miguelangel/Desktop/README.md"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
