--- a/project/nef.xcodeproj/xcshareddata/xcschemes/NefUtils.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/NefUtils.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "8BBD14AE2390179B0002970C"
-               BuildableName = "NefCommon.framework"
-               BlueprintName = "NefCommon"
+               BuildableName = "NefUtils.framework"
+               BlueprintName = "NefUtils"
                ReferencedContainer = "container:nef.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -51,8 +51,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8BBD14AE2390179B0002970C"
-            BuildableName = "NefCommon.framework"
-            BlueprintName = "NefCommon"
+            BuildableName = "NefUtils.framework"
+            BlueprintName = "NefUtils"
             ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
