--- a/project/nef.xcodeproj/xcshareddata/xcschemes/Carbon.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/Carbon.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "8B7E808123DB4C5700D4F6BD"
-               BuildableName = "Carbon"
+               BuildableName = "nef-carbon"
                BlueprintName = "Carbon"
                ReferencedContainer = "container:nef.xcodeproj">
             </BuildableReference>
@@ -45,7 +45,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8B7E808123DB4C5700D4F6BD"
-            BuildableName = "Carbon"
+            BuildableName = "nef-carbon"
             BlueprintName = "Carbon"
             ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8B7E808123DB4C5700D4F6BD"
-            BuildableName = "Carbon"
+            BuildableName = "nef-carbon"
             BlueprintName = "Carbon"
             ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
