Update Gemfile dependencies and config

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,18 +1,23 @@
-title: nef
 #-------------------------
 name: nef
+#-------------------------
+title: nef # To be used on meta tags mainly
 #-------------------------
 description: 💊 steroids for Xcode Playgrounds
 #-------------------------
 author: 47 Degrees
 keywords: functional-programming, monads, monad-transformers, functional-data-structure, swift, bow, xcode, xcode-playgrounds, playgrounds, fp-types, adt, free-monads, tagless-final, mtl, for-comprehension, category-theory
 #-------------------------
-url: https://www.47deg.com
+github-owner: bow-swift
+github-repo: nef
+#-------------------------
+url: https://nef.bow-swift.io
 #-------------------------
 markdown: kramdown
 sass:
     sass_dir: _sass
     style: compressed
+    sourcemap: never
 #-------------------------
 permalink: pretty
 #-------------------------
