--- a/project/nef.xcodeproj/xcshareddata/xcschemes/Compiler.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/Compiler.xcscheme
@@ -51,6 +51,12 @@
             ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "--project /Users/miguelangel/Desktop/BowPlayground.app"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
