compile swift page from a Playground together with sources

--- a/project/nef.xcodeproj/xcshareddata/xcschemes/Compiler.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/Compiler.xcscheme
@@ -56,6 +56,10 @@
             argument = "--project /Users/miguelangel/Desktop/BowPlayground.app"
             isEnabled = "YES">
          </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--use-cache"
+            isEnabled = "YES">
+         </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
