migrate get arguments from C functions to Swift (using CommandLine.Argument)
minor changes

minor changes

--- a/project/nef.xcodeproj/xcshareddata/xcschemes/Playground.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/Playground.xcscheme
@@ -50,6 +50,24 @@
             ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "--output /Users/miguelangel/Desktop"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--name Migue"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--playground /Users/miguelangel/Desktop"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--bow-version &quot;0.7.0&quot;"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
