removed bash scripts refactored
update rube template to support projects with spaces in naming

minor changes

minor changes

--- a/project/nef.xcodeproj/xcshareddata/xcschemes/Playground.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/Playground.xcscheme
@@ -56,7 +56,7 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "--name Migue"
+            argument = "--name Miguel\ Angel"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
